fixed wrong position of triangle in max-width 585px

--- a/css/wizardwidget.css
+++ b/css/wizardwidget.css
@@ -137,6 +137,5 @@
     .wizard li.active:after {
         content: " ";
         position: absolute;
-        left: 35%;
     }
 }
